refactor EventProcessingBenchmark to use indexed access for first and last events